<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/nav_misSitios">
    <fragment
            android:id="@+id/nav_misSitios"
            android:name="com.example.turistadroid_shei_albert.ui.MisSitios.MisSitiosFragment"
            android:label="@string/MisSitios"
            tools:layout="@layout/fragment_mis_sitios"/>
    <fragment
            android:id="@+id/nav_cerca"
            android:name="com.example.turistadroid_shei_albert.ui.CercaDeMi.CercaDeMiFragment"
            android:label="@string/cercaDeMi"
            tools:layout="@layout/fragment_cerca_de_mi"/>

    <fragment
            android:id="@+id/nav_linterna"
            android:name="com.example.turistadroid_shei_albert.ui.Linterna.LinternaFragment"
            android:label="@string/linterna"
            tools:layout="@layout/fragment_linterna"/>


    <fragment
            android:id="@+id/nav_perfil"
            android:name="com.example.turistadroid_shei_albert.ui.Perfil.PerfilFragment"
            android:label="@string/MiPerfil"
            tools:layout="@layout/fragment_perfil"/>
</navigation>