<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@drawable/color_fondo"
        android:layout_width="match_parent"
        android:id="@+id/login"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <ImageView
            android:layout_width="231dp"
            android:layout_height="220dp" app:srcCompat="@drawable/logo2" android:id="@+id/imaLoginImagen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="30dp"/>
    <EditText
            android:layout_width="237dp"
            android:layout_height="45dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/borde_et"
            android:ems="10"
            android:id="@+id/etLoginCorreo"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="15dp"
            android:paddingLeft="15dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/correo" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    <EditText
            android:layout_width="237dp"
            android:layout_height="45dp"
            android:inputType="textPassword"
            android:background="@drawable/borde_et"
            android:ems="10"
            android:id="@+id/etLoginContrasena"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="15dp"
            android:paddingLeft="15dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etLoginCorreo" android:layout_marginTop="16dp"
            android:hint="@string/contra"/>

    <TextView
            android:text="@string/registrarse"
            android:textColor="@color/colorNegro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tvLoginRegistrarse"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="18sp" android:layout_marginBottom="16dp" android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/login"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            android:textStyle="bold" android:fontFamily="sans-serif-thin" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/imaLoginImagen"
            android:layout_marginTop="32dp"/>
    <Button
            android:text="@string/entrar"
            android:layout_width="173dp"
            android:background="@drawable/borde_boton"
            android:textColor="@drawable/btn_text"
            android:layout_height="39dp" android:id="@+id/btnLoginEntrar"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/etLoginContrasena"/>
</androidx.constraintlayout.widget.ConstraintLayout>