<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/color_fondo"
        tools:context=".SplashActivity">

    <EditText
            android:layout_width="237dp"
            android:layout_height="37dp"
            android:inputType="textPersonName"
            android:background="@drawable/borde_et"
            android:ems="10"
            android:id="@+id/etRegistroNombre"
            android:drawableLeft="@drawable/ic_nombre"
            android:drawablePadding="15dp"
            android:paddingLeft="15dp"
            android:hint="@string/nombre"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/imaRegistroFoto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="237dp"
            android:layout_height="37dp"
            android:inputType="textPersonName"
            android:background="@drawable/borde_et"
            android:ems="10"
            android:id="@+id/etRegistroUsuario"
            android:drawableLeft="@drawable/ic_usuario"
            android:drawablePadding="15dp"
            android:paddingLeft="15dp"
            android:hint="@string/nombre_usuario"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/etRegistroNombre" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="237dp"
            android:layout_height="37dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/borde_et"
            android:ems="10"
            android:id="@+id/etRegistroCorreo"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="15dp"
            android:paddingLeft="15dp"
            android:hint="@string/correo"
            app:layout_constraintTop_toBottomOf="@+id/etRegistroUsuario" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"/>
    <EditText
            android:layout_width="237dp"
            android:layout_height="37dp"
            android:inputType="textPassword"
            android:background="@drawable/borde_et"
            android:ems="10"
            android:id="@+id/etRegistroContrasena"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="15dp"
            android:paddingLeft="15dp"
            android:hint="@string/contra"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/etRegistroCorreo"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>

    <Button
            android:text="@string/cancelar"
            android:layout_width="140dp"
            android:background="@drawable/borde_boton"
            android:textColor="@drawable/btn_text"
            android:layout_height="39dp" android:id="@+id/btnRegistroCancelar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnRegistroRegistrarse"
            app:layout_constraintTop_toBottomOf="@+id/etRegistroContrasena" android:layout_marginTop="24dp"/>
    <Button
            android:text="@string/registrarse"
            android:layout_width="140dp"
            android:background="@drawable/borde_boton"
            android:textColor="@drawable/btn_text"
            android:layout_height="39dp" android:id="@+id/btnRegistroRegistrarse"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnRegistroCancelar" app:layout_constraintHorizontal_bias="0.436"
            app:layout_constraintTop_toBottomOf="@+id/etRegistroContrasena" android:layout_marginTop="24dp"/>
    <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="275dp"
            android:layout_height="151dp" app:srcCompat="@drawable/fotoredonda"
            android:id="@+id/imaRegistroFoto"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"/>
    <ImageView
            android:layout_width="427dp"
            android:layout_height="330dp" app:srcCompat="@drawable/edificios_negros" android:id="@+id/imaRegistroFondo"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>