<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/color_fondo">
    <!--android:drawableLeft="@drawable/ic_lock"-->

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent" android:layout_height="match_parent"
                android:orientation="vertical">

            <EditText
                    android:layout_width="237dp"
                    android:layout_height="45dp"
                    android:inputType="textPersonName"
                    android:background="@drawable/borde_et"
                    android:drawableLeft="@drawable/ic_nombre"
                    android:ems="10"
                    android:id="@+id/etPerfilNombre"
                    android:drawablePadding="15dp"
                    android:paddingLeft="15dp"
                    android:hint="@string/nombre"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imaPerfilFoto" android:layout_marginTop="32dp"/>
            <EditText
                    android:layout_width="237dp"
                    android:layout_height="45dp"
                    android:inputType="textPersonName"
                    android:background="@drawable/borde_et"
                    android:drawableLeft="@drawable/ic_usuario"
                    android:ems="10"
                    android:id="@+id/etPerfilUsuario"
                    android:drawablePadding="15dp"
                    android:paddingLeft="15dp"
                    android:hint="@string/nombre_usuario"
                    app:layout_constraintStart_toStartOf="@+id/etPerfilNombre"
                    app:layout_constraintEnd_toEndOf="@+id/etPerfilNombre" app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintTop_toBottomOf="@+id/etPerfilNombre" android:layout_marginTop="16dp"/>

            <EditText
                    android:layout_width="237dp"
                    android:layout_height="45dp"
                    android:inputType="textPersonName"
                    android:background="@drawable/borde_et"
                    android:ems="10"
                    android:id="@+id/etPerfilContrasena"
                    android:drawableLeft="@drawable/ic_lock"
                    android:drawablePadding="15dp"
                    android:paddingLeft="15dp"
                    android:hint="@string/contra"
                    app:layout_constraintEnd_toEndOf="@+id/etPerfilCorreo"
                    app:layout_constraintStart_toStartOf="@+id/etPerfilCorreo"
                    app:layout_constraintTop_toBottomOf="@+id/etPerfilCorreo" android:layout_marginTop="16dp"
                    app:layout_constraintHorizontal_bias="1.0"/>
            <EditText
                    android:layout_width="237dp"
                    android:layout_height="45dp"
                    android:inputType="textPersonName"
                    android:background="@drawable/borde_et"
                    android:drawableLeft="@drawable/ic_twitter"
                    android:ems="10"
                    android:id="@+id/etPerfilTwitter"
                    android:drawablePadding="15dp"
                    android:paddingLeft="15dp"
                    android:hint="@string/twitter"
                    android:layout_marginTop="18dp"
                    app:layout_constraintTop_toBottomOf="@+id/etPerfilContrasena"
                    app:layout_constraintStart_toStartOf="@+id/etPerfilContrasena"
                    app:layout_constraintEnd_toEndOf="@+id/etPerfilContrasena"/>
            <EditText
                    android:layout_width="237dp"
                    android:layout_height="45dp"
                    android:inputType="textPersonName"
                    android:background="@drawable/borde_et"
                    android:drawableLeft="@drawable/ic_git"
                    android:ems="10"
                    android:id="@+id/etPerfilGitHub"
                    android:drawablePadding="15dp"
                    android:paddingLeft="15dp"
                    android:hint="@string/github"
                    app:layout_constraintStart_toStartOf="@+id/etPerfilTwitter"
                    app:layout_constraintTop_toBottomOf="@+id/etPerfilTwitter" android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="@+id/etPerfilTwitter"/>

            <Button
                    android:text="@string/GuardarCambios"
                    android:layout_width="148dp"
                    android:background="@drawable/borde_boton"
                    android:textColor="@drawable/btn_text"
                    android:layout_height="47dp" android:id="@+id/btnPerfilGuardar"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etPerfilGitHub" android:layout_marginTop="32dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="32dp"/>
            <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="275dp"
                    android:layout_height="171dp" app:srcCompat="@drawable/fotoredonda" android:id="@+id/imaPerfilFoto"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="32dp"/>
            <TextView
                    android:layout_width="236dp"
                    android:layout_height="39dp"
                    android:inputType="textPersonName"
                    android:background="@drawable/borde_et"

                    android:id="@+id/etPerfilCorreo"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="15dp"
                    android:paddingLeft="15dp"
                    android:text="@string/correo"
                    app:layout_constraintStart_toStartOf="@+id/etPerfilUsuario"
                    app:layout_constraintTop_toBottomOf="@+id/etPerfilUsuario" android:layout_marginTop="16dp"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="@+id/etPerfilUsuario"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>