<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"

                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_gravity="bottom"
                                                   android:layout_height="225dp">
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            app:cardCornerRadius="20dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintDimensionRatio="1:1">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:background="@color/colorGrisOscuro"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                    android:layout_width="103dp"
                    android:layout_height="84dp" app:srcCompat="@drawable/ic_foto"
                    android:id="@+id/imaCamaraCamara"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imaCamaraGaleria" android:layout_marginTop="75dp"/>
            <ImageView
                    android:layout_width="103dp"
                    android:layout_height="84dp" app:srcCompat="@drawable/ic_galeria"
                    android:id="@+id/imaCamaraGaleria"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/imaCamaraCamara" android:layout_marginTop="75dp"/>
            <TextView
                    android:text="@string/camara"
                    android:layout_width="wrap_content"
                    android:textColor="@color/colorBlanco"
                    android:layout_height="wrap_content" android:id="@+id/tvCamaraCamara"
                    app:layout_constraintTop_toBottomOf="@+id/imaCamaraCamara"
                    app:layout_constraintEnd_toEndOf="@+id/imaCamaraCamara"
                    app:layout_constraintStart_toStartOf="@+id/imaCamaraCamara" android:layout_marginTop="8dp"/>
            <TextView
                    android:text="@string/galeria"
                    android:textColor="@color/colorBlanco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/tvCamaraGaleria"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/imaCamaraGaleria"
                    app:layout_constraintEnd_toEndOf="@+id/imaCamaraGaleria"
                    app:layout_constraintStart_toStartOf="@+id/imaCamaraGaleria"/>
            <TextView
                    android:text="@string/infoCamara"
                    android:textColor="@color/colorBlanco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/tvCamaraOpcion"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="16dp" android:textSize="30sp"/>
            <ImageView
                    android:layout_width="1000dp"
                    android:layout_height="1dp" tools:srcCompat="@tools:sample/avatars"
                    android:id="@+id/imageView4"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>