<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragment_editar"
        android:background="@drawable/color_fondo">


    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                                                           android:orientation="vertical">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:background="@drawable/borde_et"
                    android:drawableLeft="@drawable/ic_missitios"
                    android:drawablePadding="15dp"
                    android:paddingLeft="15dp"
                    android:hint="@string/lugar"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etEditarLugar"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/etEditarNombre"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" android:layout_marginStart="16dp"/>
            <Button
                    android:text="@string/GuardarCambios"
                    android:id="@+id/btnEditarAceptar"
                    android:layout_width="140dp"
                    android:background="@drawable/borde_boton"
                    android:textColor="@drawable/btn_text"
                    android:layout_height="39dp"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/detalleLugarMapaEditar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btnEditarCancelar"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="32dp"/>
            <Spinner
                    android:id="@+id/spiEditarEstrella"
                    android:layout_width="75dp"
                    android:layout_height="0dp"
                    android:layout_centerHorizontal="true"
                    android:spinnerMode="dialog" android:entries="@array/tipos_estrellas"
                    android:layout_marginTop="35dp"
                    app:layout_constraintTop_toBottomOf="@+id/etEditarLugar"
                    app:layout_constraintStart_toEndOf="@+id/imaEditarFecha" app:layout_constraintEnd_toEndOf="parent"/>
            <ImageView
                    android:src="@drawable/ic_fecha"
                    android:layout_width="50dp"
                    android:layout_height="50dp" android:id="@+id/imaEditarFecha"
                    android:layout_marginTop="22dp"
                    app:layout_constraintTop_toBottomOf="@+id/etEditarLugar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/spiEditarEstrella"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/tvEditarFecha"
                    app:layout_constraintBottom_toBottomOf="@+id/imaEditarFecha"
                    app:layout_constraintTop_toTopOf="@+id/imaEditarFecha"
                    app:layout_constraintEnd_toStartOf="@+id/imaEditarFecha"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:inputType="textPersonName"
                    android:background="@drawable/borde_et"
                    android:drawableLeft="@drawable/ic_nombrelugar"
                    android:drawablePadding="15dp"
                    android:paddingLeft="15dp"
                    android:hint="@string/nombre"
                    android:ems="10"
                    android:id="@+id/etEditarNombre"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/imaEditarFoto"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" android:layout_marginStart="16dp"/>
            <Button
                    android:text="@string/cancelar"
                    android:id="@+id/btnEditarCancelar"
                    android:layout_width="140dp"
                    android:background="@drawable/borde_boton"
                    android:textColor="@drawable/btn_text"
                    android:layout_height="39dp"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/detalleLugarMapaEditar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/btnEditarAceptar"/>
            <de.hdodenhof.circleimageview.CircleImageView
                    android:src="@drawable/lugar4"
                    android:layout_width="150dp"
                    android:layout_height="150dp" android:id="@+id/imaEditarFoto"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="149dp"
                    android:inputType="textMultiLine"
                    android:gravity="start|top"
                    android:background="@drawable/borde_et"
                    android:ems="10"
                    android:hint="@string/comentario"
                    android:id="@+id/etEditarComentario"
                    app:layout_constraintTop_toBottomOf="@+id/imaEditarFecha"
                    android:layout_marginTop="16dp" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"/>
            <ImageView
                    android:src="@drawable/ic_star"
                    android:layout_width="50dp"
                    android:layout_height="50dp" android:id="@+id/imaEditarEstrella"
                    app:layout_constraintBottom_toBottomOf="@+id/spiEditarEstrella"
                    app:layout_constraintTop_toTopOf="@+id/spiEditarEstrella"
                    app:layout_constraintStart_toEndOf="@+id/spiEditarEstrella"/>
            <fragment
                    android:layout_height="300dp"
                    android:layout_width="match_parent"
                    android:id="@+id/detalleLugarMapaEditar"
                    tools:context="com.example.mislugares.UI.noticias.NoticiasFragment"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/etEditarComentario"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>